<resources>
    <string name="app_name">ภาษาอังกฤษทุกวัน</string>
    <string name="facebook_app_id">254605841663505</string>
    <string name="add_account">Add Account</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="next">ต่อไป</string>
    <string name="login">ล็อกอินหรือลงทะเบียน</string>
    <string name="action_settings">Settings</string>
    <string name="show_class">ชั้น</string>
    <string name="refresh">รีเฟรช</string>
    <string name="change_user">เปลี่ยนบัญชี</string>
    <string name="login_submit">สืบสาน</string>
    <string name="connect_to_network">ช่วยเชื่อมต่อกับอินเทอร์เน็ตแล้วแตะต่อ</string>
    <string name="no_internet">ไม่มีอินเทอร์เน็ต</string>
    <string name="ok">ต่อ</string>
    <string name="error">ข้อผิดพลาด</string>
    <string name="word_total_label">จำนวนรวมของคำ</string>
    <string name="lesson_completed">บทเรียนเสร็จสิ้น</string>
    <string name="wrong_password">รหัสผ่านไม่ถูกต้อง</string>
    <string name="downloading_lessons">ดาวน์โหลดบทเรียน</string>
    <string name="dont_know">ไม่ทราบ</string>
    <string name="childAt">เด็กที่</string>
    <string name="room">ห้อง</string>
    <string name="classCode">รหัสชั้น</string>
    <string name="teacherId">ครูีี่่ที่</string>
    <string name="find">หา</string>
    <string name="firstName">ชื่อ</string>
    <string name="lastName">นามสกุล</string>
    <string name="login2">ล็อคอิน</string>
    <string name="correct">ถูกต้อง</string>
    <string name="home">บ้าน</string>
    <string name="mistakes">ผิดพลาด</string>
    <string name="total_words">จำนวนคำ</string>
    <string name="percentage_of_english">เปอร์เซ็นต์ภาษาอังกฤษ</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_text_to_speech">TextToSpeechActivity</string>
</resources>
