<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="everyday.sukhajata.com.everydayenglish.MainActivity">
    <item android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_class"
        android:orderInCategory="2"
        android:title="@string/show_class"
        android:icon="@drawable/ic_school_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_switchUser"
        android:orderInCategory="3"
        android:title="@string/change_user"
        android:icon="@drawable/ic_person_add_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_home"
        android:orderInCategory="4"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="always"
        />
</menu>
